# python-fastapi-boilerplate

./: .gitignore  Dockerfile  README.md  dev_main.py  pyproject.toml
app/: config.py  gunicorn_config.py  main.py  schedule_tasks.py
app/middleware/: middlewares_manager.py  pack_request_parameters_middleware.py  pretty_print_middleware.py
app/resources/: settings.conf.yaml
app/utils/: log_json_formatter.py  log_manager.py
